formatting and loading pages

--- a/Assessment Code/CSS/style.css
+++ b/Assessment Code/CSS/style.css
@@ -98,3 +98,12 @@ p {
 #tableText {
     font-size: 6vw;
 }
+
+#randomBtn {
+    padding: 2vw;
+    font-size: 3vw;
+}
+
+#randomPage2 {
+    display: none;
+}
